--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
 			<version>2.0.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.publicis.sapient.p2p</groupId>
+			<artifactId>commonFrameWork</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
